--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -10,12 +10,30 @@
   <body>
     <a-scene background="color: #333333">
       <a-box id="myBox"
-        width="3"
-        height="2"
+        position="0 2 -5"
+        width="1"
+        height="5"
         depth="1"
-        color="#BBAA33" 
+        rotation="36 36 36"
+        scale="0.5 0.5 0.5"
+        color="#FAFAFA"
         shadow>
       </a-box>
+      <a-torus-knot
+        position="0 2 -5"
+        color="#212121"
+        scale="0.2 0.2 0.2"
+        arc="180"
+        p="2"
+        q="7"
+        radius="5"
+        radius-tubular="0.1">
+      </a-torus-knot>
+      <a-cylinder
+        position="0 2 -8"
+        color="cyan"
+        segments-radial="6">
+      </a-cylinder>
     </a-scene>
   </body>
 </html>
