--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -23,7 +23,12 @@
         material="src: #wood"
         shadow
         animation="property: rotation;
-                   to: 10 10 10; 
+                   to: 10 10 10;
+                   dur: 2000;
+                   easing: linear;
+                   loop: true"
+                  "property: scale;
+                   to: 2 2 2;
                    dur: 2000;
                    easing: linear;
                    loop: true" >
