--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -27,7 +27,7 @@
                    dur: 2000;
                    easing: linear;
                    loop: true"
-                  "property: scale;
+        animation="property: scale;
                    to: 2 2 2;
                    dur: 2000;
                    easing: linear;
