--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -22,16 +22,17 @@
         depth="1"
         material="src: #wood"
         shadow
-        animation="property: rotation;
-                   to: 10 10 10;
-                   dur: 2000;
-                   easing: linear;
-                   loop: true"
-        animation="property: scale;
-                   to: 2 2 2;
-                   dur: 2000;
-                   easing: linear;
-                   loop: true" >
+        animation__rotate="property: rotation;
+                           to: 100 10 10;
+                           dur: 5000;
+                           easing: linear;
+                           loop: true"
+        animation__position="property: position;
+                             to: 3 -1 0;
+                             dur: 5000;
+                             easing: linear;
+                             loop: true"
+                   >
       </a-box>
       <a-box id="myOtherBox"
         position="2 1 -3"
